# 5A-GameEngine

./: .gitignore  CMakeLists.txt  README.md  library.cpp  library.h  main.cpp
dll/: CMakeLists.txt  library.h
dll/headers/: EntityManager.h  Utils.h  library.h
dll/src/: EntityManager.cpp  library.cpp
engine/: CMakeLists.txt
engine/cmake/: Installing.cmake
engine/headers/: ComponentCollection.h  ComponentManager.h  EntityManager.h  IComponentCollection.h  MultiDelegate.cpp  MultiDelegate.h  RTTI.h  System.h  SystemManager.h
engine/include/: Engine.h
engine/src/: ComponentCollection.cpp  ComponentManager.cpp  Engine.cpp  EntityManager.cpp  RTTI.cpp  System.cpp  SystemManager.cpp
exe/: CMakeLists.txt
exe/src/: main.cpp
headers/: Clock.h  ComponentCollection.hpp  ComponentManager.hpp  Engine.hpp  EntityManager.h  IComponentCollection.h  ISystem.h  MultiDelegate.hpp  RTTI.h  System.hpp  SystemManager.hpp  ThreadPool.h  Transform.h  global.h
include/: ECS.h
src/: ComponentManager.cpp  Engine.cpp  EntityManager.cpp  SystemManager.cpp  ThreadPool.cpp  Transform.cpp
